Command cleanup, improve /statistics.
/statistics entities can now show how many mobs of each type or per player are deactivated by activation range.